[package]
name = "solana-account-info"
description = "Solana AccountInfo and related definitions."
documentation = "https://docs.rs/solana-account-info"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
bincode = ["dep:bincode", "dep:serde"]

[dependencies]
bincode = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
solana-address = { workspace = true, features = ["decode"] }
solana-program-error = { workspace = true }
solana-program-memory = { workspace = true }

[dev-dependencies]
solana-address = { workspace = true, features = ["atomic"] }
