[package]
name = "solana-account-view"
description = "Lightweight representation of a runtime account"
documentation = "https://docs.rs/solana-account-view"
version = "0.0.0"
rust-version = "1.81.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
copy = ["solana-address/copy"]

[dependencies]
solana-address = { workspace = true }
solana-program-error = { workspace = true }

[lints]
workspace = true
