[package]
name = "solana-big-mod-exp"
description = "Solana big integer modular exponentiation"
documentation = "https://docs.rs/solana-big-mod-exp"
version = "2.2.1"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[target.'cfg(not(target_os = "solana"))'.dependencies]
num-bigint = { workspace = true }
num-traits = { workspace = true }

[target.'cfg(target_os = "solana")'.dependencies]
solana-define-syscall = { workspace = true }

[dev-dependencies]
array-bytes = { workspace = true }
criterion = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "big_mod_exp_bench"
harness = false
