[package]
name = "solana-bincode"
description = "Solana bincode utilities"
documentation = "https://docs.rs/solana-bincode"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bincode = { workspace = true }
serde_core = { workspace = true }
solana-instruction-error = { workspace = true }

[dev-dependencies]
solana-system-interface = { workspace = true, features = ["bincode"] }

[lints]
workspace = true
