[package]
name = "solana-blake3-hasher"
description = "Solana BLAKE3 hashing"
documentation = "https://docs.rs/solana-blake3-hasher"
version = "3.1.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
blake3 = ["dep:blake3"]

[dependencies]
solana-hash = { workspace = true, features = ["decode"] }

[target.'cfg(any(target_os = "solana", target_arch = "bpf"))'.dependencies]
solana-define-syscall = { workspace = true }

[target.'cfg(not(any(target_os = "solana", target_arch = "bpf")))'.dependencies]
blake3 = { workspace = true, optional = true }

[dev-dependencies]
solana-blake3-hasher = { path = ".", features = ["blake3"] }

[lints]
workspace = true
