[package]
name = "solana-bls-signatures"
description = "Solana BLS Signatures"
documentation = "https://docs.rs/solana-bls-signatures"
version = "0.1.0"
rust-version = "1.81.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["rlib"]

[features]
bytemuck = ["dep:bytemuck"]
default = ["std"]
frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro", "std"]
parallel = ["dep:rayon"]
serde = ["dep:cfg_eval", "dep:serde", "dep:serde_with"]
solana-signer-derive = ["dep:solana-signer", "dep:solana-signature", "dep:subtle"]
std = ["dep:serde_json"]

[dependencies]
base64 = { workspace = true }
bytemuck = { workspace = true, optional = true }
cfg_eval = { workspace = true, optional = true }
pairing = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
serde_with = { workspace = true, features = ["macros"], optional = true }
solana-frozen-abi = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
solana-frozen-abi-macro = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
thiserror = { workspace = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
blst = { workspace = true }
blstrs = { workspace = true }
ff = { workspace = true }
group = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true, optional = true }
solana-signature = { workspace = true, optional = true }
solana-signer = { workspace = true, optional = true }
subtle = { workspace = true, optional = true }

[dev-dependencies]
bincode = { workspace = true }
criterion = { workspace = true }
solana-bls-signatures = { path = ".", features = ["std"] }
solana-keypair = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "bls_signatures"
harness = false
