[package]
name = "solana-borsh"
description = "Solana Borsh utilities"
documentation = "https://docs.rs/solana-borsh"
version = "2.2.1"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
borsh = { workspace = true }

[lints]
workspace = true
