[package]
name = "solana-define-syscall"
description = "Solana define_syscall macro and core syscall definitions."
documentation = "https://docs.rs/solana-define-syscall"
version = "4.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
# static syscalls for eBPF are experimental and
# not guaranteed to work
unstable-static-syscalls = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(target_feature, values("static-syscalls"))',
] }
