[package]
name = "solana-epoch-rewards-hasher"
description = "Solana epoch rewards hasher."
documentation = "https://docs.rs/solana-epoch-rewards-hasher"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
siphasher = { workspace = true }
solana-address = { workspace = true }
solana-hash = { workspace = true }

[dev-dependencies]
solana-address = { workspace = true, features = ["atomic"] }
solana-hash = { workspace = true, features = ["atomic"] }

[lints]
workspace = true
