[package]
name = "solana-frozen-abi-macro"
description = "Solana Frozen ABI Macro"
documentation = "https://docs.rs/solana-frozen-abi-macro"
version = "3.0.1"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[lib]
proc-macro = true

[features]
default = []
# activate the frozen-abi feature when we actually want to do frozen-abi testing,
# otherwise leave it off because it requires nightly Rust
frozen-abi = []

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }

[lints]
workspace = true
