[package]
name = "solana-frozen-abi"
description = "Solana Frozen ABI"
documentation = "https://docs.rs/solana-frozen-abi"
version = "2.3.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
default = []
# activate the frozen-abi feature when we actually want to do frozen-abi testing,
# otherwise leave it off because it requires nightly Rust
frozen-abi = []

[dependencies]
boxcar = { workspace = true }
bs58 = { workspace = true, features = ["alloc"] }
bv = { workspace = true, features = ["serde"] }
bytes = { workspace = true }
dashmap = { workspace = true }
log = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["rc"] }
serde_derive = { workspace = true }
serde_with = { workspace = true }
sha2 = { workspace = true }
solana-frozen-abi-macro = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
im = { workspace = true, features = ["rayon", "serde"] }
memmap2 = { workspace = true }

[target.'cfg(not(target_os = "solana"))'.dev-dependencies]
bitflags = { workspace = true, features = ["serde"] }
serde_bytes = { workspace = true }
serde_with = { workspace = true, features = ["macros"] }
solana-logger = { workspace = true }

[lints]
workspace = true
