[package]
name = "solana-frozen-abi"
description = "Solana Frozen ABI"
documentation = "https://docs.rs/solana-frozen-abi"
version = "3.2.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
default = []
# activate the frozen-abi feature when we actually want to do frozen-abi testing,
# otherwise leave it off because it requires nightly Rust
frozen-abi = []

[dependencies]
boxcar = { workspace = true }
bs58 = { workspace = true, features = ["alloc"] }
bv = { workspace = true, features = ["serde"] }
bytes = { workspace = true }
dashmap = { workspace = true }
log = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["rc"] }
serde_derive = { workspace = true }
serde_with = { workspace = true }
sha2 = { workspace = true }
solana-frozen-abi-macro = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
# These dependencies are used only to back `frozen-abi` StableAbi API,
# to avoid version skew and keep digest computation stable regardless of consumer dependencies.
bincode = "1.3.3"
im = { workspace = true, features = ["rayon", "serde"] }
imbl = { workspace = true, features = ["rayon", "serde"] }
memmap2 = { workspace = true }
# These dependencies are used only to back `frozen-abi` StableAbi API,
# to avoid version skew and keep digest computation stable regardless of consumer dependencies.
rand = { workspace = true }
rand_chacha = { workspace = true }

[target.'cfg(not(target_os = "solana"))'.dev-dependencies]
bitflags = { workspace = true, features = ["serde"] }
serde_bytes = { workspace = true }
serde_with = { workspace = true, features = ["macros"] }

[lints]
workspace = true
