[package]
name = "solana-instruction"
description = "Types for directing the execution of Solana programs."
documentation = "https://docs.rs/solana-instruction"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
bincode = ["dep:bincode", "dep:serde"]
borsh = ["dep:borsh"]
default = ["std"]
frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro", "serde", "std"]
serde = ["dep:serde", "dep:serde_derive", "solana-pubkey/serde"]
std = ["serde?/std", "borsh?/std"]
syscalls = ["std"]

[dependencies]
bincode = { workspace = true, optional = true }
borsh = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
solana-frozen-abi = { workspace = true, optional = true }
solana-frozen-abi-macro = { workspace = true, optional = true }
solana-instruction-error = { workspace = true, features = ["num-traits"] }
solana-pubkey = { workspace = true, default-features = false }

[target.'cfg(target_os = "solana")'.dependencies]
solana-define-syscall = { workspace = true }

[dev-dependencies]
solana-instruction = { path = ".", features = ["borsh"] }

[lints]
workspace = true
