[package]
name = "solana-instructions-sysvar"
description = "Type for instruction introspection during execution of Solana programs."
documentation = "https://docs.rs/solana-instructions-sysvar"
version = "2.2.2"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
dev-context-only-utils = ["dep:qualifier_attr"]

[dependencies]
qualifier_attr = { workspace = true, optional = true }
solana-account-info = { workspace = true }
solana-instruction = { workspace = true, default-features = false, features = ["std"] }
solana-instruction-error = { workspace = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true, default-features = false }
solana-sanitize = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-serialize-utils = { workspace = true }
solana-sysvar-id = { workspace = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
bitflags = { workspace = true }

[lints]
workspace = true
